operator for db was added