@@ -2,6 +2,7 @@ package service.impl;
 
 import db.Storage;
 import java.util.List;
+import java.util.stream.Collectors;
 import service.CreatReport;
 
 public class ReportCreator implements CreatReport {
@@ -10,7 +11,7 @@ public class ReportCreator implements CreatReport {
     @Override
     public List<String> creatReport() {
         return Storage.storage.entrySet().stream()
-                .map(e -> "" + e.getKey() + SPLITERATOR + e.getValue() + System.lineSeparator())
-                .toList();
+                .map(e -> e.getKey() + SPLITERATOR + e.getValue() + System.lineSeparator())
+                .collect(Collectors.toList());
     }
 }
